--- a/index.html
+++ b/index.html
@@ -18,10 +18,17 @@
 
 <div class= "container">
     <div class = "row">
-        <div class= "col-3">
-            <div class="md-form mt-0">
-                <input class="form-control" type="text" placeholder="Please search a city" aria-label="Search">
-            </div>
+        <div class= "col-3 p-0">
+            <form class="form-inline d-flex justify-content-center md-form form-sm pt-2 pb-2 bg-secondary">
+                <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search"
+                aria-label="Search">
+                <i class="fas fa-search" aria-hidden="true"></i>
+            </form>
+            <div style="height: 500px; background-color: black;"> </div>
+        </div>
+        <div class = "col-9 p-0">
+            <div style="height: 400px; background-color: gray;"> </div>
+            <div style="height: 200px; background-color: blue;"> </div>
         </div>
     </div>
 </div>
