--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="Description" content="Enter your description here"/>
+
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
 <link rel="stylesheet" href="assets/css/style.css">
+
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
 <title>Weather</title>
 </head>
 <body>
@@ -22,7 +27,7 @@
             <form class="form-inline d-flex justify-content-center md-form form-sm pt-2 pb-2 bg-secondary">
                 <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search"
                 aria-label="Search">
-                <i class="fas fa-search" aria-hidden="true"></i>
+                <a href="" style="color: white;"><i class="fas fa-search" aria-hidden="true"></i></a>
             </form>
             <div style="height: 500px; background-color: black;"> </div>
         </div>
@@ -33,6 +38,7 @@
     </div>
 </div>
 
+<script src="script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
