--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="ano
             <form class="form-inline d-flex justify-content-center md-form form-sm pt-2 pb-2 bg-secondary">
                 <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search"
                 aria-label="Search">
-                <a href="" style="color: white;"><i class="fas fa-search" aria-hidden="true"></i></a>
+                <a href="" id ="city-search" style="color: white;"><i class="fas fa-search" aria-hidden="true"></i></a>
             </form>
             <div style="height: 500px; background-color: black;"> </div>
         </div>
@@ -38,6 +38,7 @@ integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="ano
     </div>
 </div>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 <script src="script.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
