--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
-<link rel="stylesheet" href="assets/css/style.css">
+<link rel="stylesheet" href="./style.css">
 
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
 integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
-<title>Weather</title>
+<title>Weather Track</title>
 </head>
 <body>
 
@@ -32,7 +32,10 @@ integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="ano
             <div style="height: 500px; background-color: black;"> </div>
         </div>
         <div class = "col-9 p-0">
-            <div style="height: 400px; background-color: gray;"> </div>
+            <div style="height: 400px; background-color: gray;">
+                <div class= "row pl-3" id="current-WTI">
+                </div> 
+            </div>
             <div style="height: 200px; background-color: blue;"> </div>
         </div>
     </div>
