--- a/index.html
+++ b/index.html
@@ -1,50 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<meta name="Description" content="Enter your description here"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="Description" content="Enter your description here" />
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
-<link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css">
+    <link rel="stylesheet" href="./style.css">
 
-<script src="https://code.jquery.com/jquery-3.5.1.min.js"
-integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
-<title>Weather Track</title>
+    <title>Weather Track</title>
 </head>
+
 <body>
 
-<nav class="navbar navbar-dark bg-dark">
-    <span class="navbar-brand mb-0 h1">Weather Track</span>
-</nav>
+    <nav class="navbar navbar-dark bg-dark">
+        <span class="navbar-brand mb-0 h1">Weather Track</span>
+    </nav>
 
-<div class= "container">
-    <div class = "row">
-        <div class= "col-3 p-0">
-            <form class="form-inline d-flex justify-content-center md-form form-sm pt-2 pb-2 bg-secondary">
-                <input class="form-control form-control-sm mr-3 w-75" type="text" placeholder="Search"
-                aria-label="Search">
-                <a href="" id ="city-search" style="color: white;"><i class="fas fa-search" aria-hidden="true"></i></a>
-            </form>
-            <div style="height: 500px; background-color: black;"> </div>
-        </div>
-        <div class = "col-9 p-0">
-            <div style="height: 400px; background-color: gray;">
-                <div class= "row pl-3" id="current-WTI">
-                </div> 
+    <div class="container">
+        <div class="row">
+            <div class="col-3 p-0">
+                
+                    <form class=" col-12 form-inline d-flex justify-content-center md-form form-sm pt-2 pb-2 px-0 bg-secondary">
+                        <input class="form-control form-control-sm w-75" type="text" id="location"
+                            placeholder="Please input city..." aria-label="Search">
+                            <a class = "col-2"  id="city-search" style="color: white;"><i class="fas fa-search"
+                            aria-hidden="true"></i></a>
+                    </form>
+                
+                <div style="height: 500px; background-color: black;"> </div>
             </div>
-            <div style="height: 200px; background-color: blue;"> </div>
+            <div class="col-9 p-0">
+                <div style="height: 400px; background-color: gray;">
+                    <div class="row pl-3" id="current-WTI">
+                    </div>
+                </div>
+                <div style="height: 200px; background-color: blue;"> </div>
+            </div>
         </div>
     </div>
-</div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-<script src="script.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
+
 </html>
