submit on enter now works

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="row">
             <div class="col-3 p-0">
                 
-                    <form class=" col-12 form-inline d-flex justify-content-center md-form form-sm pt-2 pb-2 px-0 bg-secondary">
+                    <form id="e-submit" class=" col-12 form-inline d-flex justify-content-center md-form form-sm pt-2 pb-2 px-0 bg-secondary">
                         <input class="form-control form-control-sm w-75" type="text" id="location"
                             placeholder="Please input city..." aria-label="Search">
                             <a class = "col-2"  id="city-search" style="color: white;"><i class="fas fa-search"
