adding stuff to page

--- a/index.html
+++ b/index.html
@@ -36,10 +36,12 @@
                 
                 <div style="height: 500px; background-color: black;"> </div>
             </div>
+
             <div class="col-9 p-0">
                 <div style="height: 400px; background-color: gray;">
-                    <div class="row pl-3" id="current-WTI">
-                    </div>
+                    <div class="row pl-3 mr-0" id="cityName"></div>
+                    <div class="row pl-3" id="date"></div>
+                    <div class="row pl-3" id="currentW"></div>
                 </div>
                 <div style="height: 200px; background-color: blue;"> </div>
             </div>
