added condition stuff

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 
             <div class="col-9 p-0">
                 <div style="height: 400px; background-color: gray;">
-                    <div class="row pl-3 mr-0" id="cityName"></div>
+                    <div class=row>
+                        <div class="pl-3 mt-2" id="cityName"> </div> <img id="condImg" src="">
+                    </div>
                     <div class="row pl-3" id="date"></div>
                     <div class="row pl-3" id="currentW"></div>
                 </div>
