--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
                     </div>
                     <div class="row pl-3" id="date"></div>
                     <div class="row pl-3" id="currentW"></div>
+                    <div class="row pl-3" id="curHum"></div>
+                    <div class="row pl-3" id="curWind"></div>
                 </div>
                 <div style="height: 200px; background-color: blue;"> </div>
             </div>
