--- a/index.html
+++ b/index.html
@@ -43,17 +43,17 @@
                 </div>
 
                 <div class="col-9 p-0">
-                    <div class="container" style="height: 220px; background-color: #cacacb;">
+                    <div class="container" id="currW" style="height: 220px; background-color: #cacacb;">
                         <div class=row>
-                            <div class="pl-5 mt-2 mb-0" id="cityName"> </div> <img class="pl-3" id="condImg" src="">
+                            <div class="pl-5 mt-2 mb-0 clearable" id="cityName"> </div> <img class="pl-3 clearable" id="condImg" src="">
                         </div>
-                        <div class="row pl-5 pt-0 font-italic" id="date"></div>
-                        <div class="row pl-5 pt-2" id="currentW"></div>
-                        <div class="row pl-5 pt-2" id="curHum"></div>
-                        <div class="row pl-5 pt-2" id="curWind"></div>
-                        <div class="row pl-5 pt-2" id="UVICont"></div>
+                        <div class="row pl-5 pt-0 font-italic clearable" id="date"></div>
+                        <div class="row pl-5 pt-2 clearable" id="currentW"></div>
+                        <div class="row pl-5 pt-2 clearable" id="curHum"></div>
+                        <div class="row pl-5 pt-2 clearable" id="curWind"></div>
+                        <div class="row pl-5 pt-2 clearable" id="UVICont"></div>
                     </div>
-                    <div style="height: 200px; background-color: blue;"> </div>
+                    <div style="height: 200px; background-color: #CCE6F4;"> </div>
                 </div>
             </div>
         </div>
