--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 
-    <nav class="navbar navbar-dark bg-dark">
+    <nav class="navbar navbar-dark bg-dark justify-content-center">
         <span class="navbar-brand mb-0 h1">Weather Track</span>
     </nav>
 
@@ -43,7 +43,7 @@
                 </div>
 
                 <div class="col-9 p-0">
-                    <div class="container" id="currW" style="height: 220px; background-color: #cacacb;">
+                    <div class="container" style="height: 220px; background-color: #cacacb;">
                         <div class=row>
                             <div class="pl-5 mt-2 mb-0 clearable" id="cityName"> </div> <img class="pl-3 clearable" id="condImg" src="">
                         </div>
@@ -53,7 +53,9 @@
                         <div class="row pl-5 pt-2 clearable" id="curWind"></div>
                         <div class="row pl-5 pt-2 clearable" id="UVICont"></div>
                     </div>
-                    <div style="height: 200px; background-color: #CCE6F4;"> </div>
+                    <div class="container" style="height: 200px; background-color: #CCE6F4;">
+                        <div class = "row clearable" id="5day"></div>
+                    </div>
                 </div>
             </div>
         </div>
